Jann 30/objects/Deal_UN_PW_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret_Key__c</fullName>
        <label>Secret Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_End_Point__c</fullName>
        <label>Token End Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Deal UN/PW Setting</label>
</CustomObject>